noinst_LTLIBRARIES = libprotobuf.la
libprotobuf_la_CPPFLAGS = \
	-include $(top_builddir)/config.h
libprotobuf_la_CXXFLAGS = -std=c++11
libprotobuf_la_SOURCES = \
	google/protobuf/any.cc \
	google/protobuf/any.h \
	google/protobuf/any.pb.cc \
	google/protobuf/any.pb.h \
	google/protobuf/api.pb.cc \
	google/protobuf/api.pb.h \
	google/protobuf/arena.cc \
	google/protobuf/arena.h \
	google/protobuf/arenastring.cc \
	google/protobuf/arenastring.h \
	google/protobuf/compiler/code_generator.cc \
	google/protobuf/compiler/code_generator.h \
	google/protobuf/compiler/command_line_interface.cc \
	google/protobuf/compiler/command_line_interface.h \
	google/protobuf/compiler/cpp/cpp_enum.cc \
	google/protobuf/compiler/cpp/cpp_enum.h \
	google/protobuf/compiler/cpp/cpp_enum_field.cc \
	google/protobuf/compiler/cpp/cpp_enum_field.h \
	google/protobuf/compiler/cpp/cpp_extension.cc \
	google/protobuf/compiler/cpp/cpp_extension.h \
	google/protobuf/compiler/cpp/cpp_field.cc \
	google/protobuf/compiler/cpp/cpp_field.h \
	google/protobuf/compiler/cpp/cpp_file.cc \
	google/protobuf/compiler/cpp/cpp_file.h \
	google/protobuf/compiler/cpp/cpp_generator.cc \
	google/protobuf/compiler/cpp/cpp_generator.h \
	google/protobuf/compiler/cpp/cpp_helpers.cc \
	google/protobuf/compiler/cpp/cpp_helpers.h \
	google/protobuf/compiler/cpp/cpp_map_field.cc \
	google/protobuf/compiler/cpp/cpp_map_field.h \
	google/protobuf/compiler/cpp/cpp_message.cc \
	google/protobuf/compiler/cpp/cpp_message.h \
	google/protobuf/compiler/cpp/cpp_message_field.cc \
	google/protobuf/compiler/cpp/cpp_message_field.h \
	google/protobuf/compiler/cpp/cpp_options.h \
	google/protobuf/compiler/cpp/cpp_primitive_field.cc \
	google/protobuf/compiler/cpp/cpp_primitive_field.h \
	google/protobuf/compiler/cpp/cpp_service.cc \
	google/protobuf/compiler/cpp/cpp_service.h \
	google/protobuf/compiler/cpp/cpp_string_field.cc \
	google/protobuf/compiler/cpp/cpp_string_field.h \
	google/protobuf/compiler/importer.cc \
	google/protobuf/compiler/importer.h \
	google/protobuf/compiler/package_info.h \
	google/protobuf/compiler/parser.cc \
	google/protobuf/compiler/parser.h \
	google/protobuf/compiler/plugin.cc \
	google/protobuf/compiler/plugin.h \
	google/protobuf/compiler/plugin.pb.cc \
	google/protobuf/compiler/plugin.pb.h \
	google/protobuf/compiler/profile.pb.cc \
	google/protobuf/compiler/profile.pb.h \
	google/protobuf/compiler/subprocess.cc \
	google/protobuf/compiler/subprocess.h \
	google/protobuf/compiler/zip_writer.cc \
	google/protobuf/compiler/zip_writer.h \
	google/protobuf/descriptor.cc \
	google/protobuf/descriptor.h \
	google/protobuf/descriptor.pb.cc \
	google/protobuf/descriptor.pb.h \
	google/protobuf/descriptor_database.cc \
	google/protobuf/descriptor_database.h \
	google/protobuf/duration.pb.cc \
	google/protobuf/duration.pb.h \
	google/protobuf/dynamic_message.cc \
	google/protobuf/dynamic_message.h \
	google/protobuf/empty.pb.cc \
	google/protobuf/empty.pb.h \
	google/protobuf/extension_set.cc \
	google/protobuf/extension_set.h \
	google/protobuf/extension_set_heavy.cc \
	google/protobuf/field_mask.pb.cc \
	google/protobuf/field_mask.pb.h \
	google/protobuf/generated_enum_reflection.h \
	google/protobuf/generated_enum_util.h \
	google/protobuf/generated_message_reflection.cc \
	google/protobuf/generated_message_reflection.h \
	google/protobuf/generated_message_table_driven.cc \
	google/protobuf/generated_message_table_driven.h \
	google/protobuf/generated_message_util.cc \
	google/protobuf/generated_message_util.h \
	google/protobuf/has_bits.h \
	google/protobuf/io/coded_stream.cc \
	google/protobuf/io/coded_stream.h \
	google/protobuf/io/coded_stream_inl.h \
	google/protobuf/io/gzip_stream.cc \
	google/protobuf/io/gzip_stream.h \
	google/protobuf/io/package_info.h \
	google/protobuf/io/printer.cc \
	google/protobuf/io/printer.h \
	google/protobuf/io/strtod.cc \
	google/protobuf/io/strtod.h \
	google/protobuf/io/tokenizer.cc \
	google/protobuf/io/tokenizer.h \
	google/protobuf/io/zero_copy_stream.cc \
	google/protobuf/io/zero_copy_stream.h \
	google/protobuf/io/zero_copy_stream_impl.cc \
	google/protobuf/io/zero_copy_stream_impl.h \
	google/protobuf/io/zero_copy_stream_impl_lite.cc \
	google/protobuf/io/zero_copy_stream_impl_lite.h \
	google/protobuf/map.h \
	google/protobuf/map_entry.h \
	google/protobuf/map_entry_lite.h \
	google/protobuf/map_field.cc \
	google/protobuf/map_field.h \
	google/protobuf/map_field_inl.h \
	google/protobuf/map_field_lite.h \
	google/protobuf/map_type_handler.h \
	google/protobuf/message.cc \
	google/protobuf/message.h \
	google/protobuf/message_lite.cc \
	google/protobuf/message_lite.h \
	google/protobuf/metadata.h \
	google/protobuf/metadata_lite.h \
	google/protobuf/package_info.h \
	google/protobuf/reflection.h \
	google/protobuf/reflection_internal.h \
	google/protobuf/reflection_ops.cc \
	google/protobuf/reflection_ops.h \
	google/protobuf/repeated_field.cc \
	google/protobuf/repeated_field.h \
	google/protobuf/service.cc \
	google/protobuf/service.h \
	google/protobuf/source_context.pb.cc \
	google/protobuf/source_context.pb.h \
	google/protobuf/struct.pb.cc \
	google/protobuf/struct.pb.h \
	google/protobuf/stubs/atomic_sequence_num.h \
	google/protobuf/stubs/atomicops.h \
	google/protobuf/stubs/atomicops_internals_arm64_gcc.h \
	google/protobuf/stubs/atomicops_internals_arm_gcc.h \
	google/protobuf/stubs/atomicops_internals_arm_qnx.h \
	google/protobuf/stubs/atomicops_internals_atomicword_compat.h \
	google/protobuf/stubs/atomicops_internals_generic_c11_atomic.h \
	google/protobuf/stubs/atomicops_internals_generic_gcc.h \
	google/protobuf/stubs/atomicops_internals_mips_gcc.h \
	google/protobuf/stubs/atomicops_internals_power.h \
	google/protobuf/stubs/atomicops_internals_ppc_gcc.h \
	google/protobuf/stubs/atomicops_internals_solaris.h \
	google/protobuf/stubs/atomicops_internals_tsan.h \
	google/protobuf/stubs/atomicops_internals_x86_gcc.cc \
	google/protobuf/stubs/atomicops_internals_x86_gcc.h \
	google/protobuf/stubs/atomicops_internals_x86_msvc.cc \
	google/protobuf/stubs/atomicops_internals_x86_msvc.h \
	google/protobuf/stubs/bytestream.cc \
	google/protobuf/stubs/bytestream.h \
	google/protobuf/stubs/callback.h \
	google/protobuf/stubs/casts.h \
	google/protobuf/stubs/common.cc \
	google/protobuf/stubs/common.cc \
	google/protobuf/stubs/common.h \
	google/protobuf/stubs/fastmem.h \
	google/protobuf/stubs/hash.h \
	google/protobuf/stubs/int128.cc \
	google/protobuf/stubs/int128.h \
	google/protobuf/stubs/logging.h \
	google/protobuf/stubs/logging.h \
	google/protobuf/stubs/macros.h \
	google/protobuf/stubs/map_util.h \
	google/protobuf/stubs/mathlimits.cc \
	google/protobuf/stubs/mathlimits.h \
	google/protobuf/stubs/mathutil.h \
	google/protobuf/stubs/mutex.h \
	google/protobuf/stubs/once.cc \
	google/protobuf/stubs/once.h \
	google/protobuf/stubs/platform_macros.h \
	google/protobuf/stubs/port.h \
	google/protobuf/stubs/scoped_ptr.h \
	google/protobuf/stubs/shared_ptr.h \
	google/protobuf/stubs/singleton.h \
	google/protobuf/stubs/status.cc \
	google/protobuf/stubs/status.h \
	google/protobuf/stubs/status_macros.h \
	google/protobuf/stubs/statusor.cc \
	google/protobuf/stubs/statusor.h \
	google/protobuf/stubs/stl_util.h \
	google/protobuf/stubs/stringpiece.cc \
	google/protobuf/stubs/stringpiece.h \
	google/protobuf/stubs/stringprintf.cc \
	google/protobuf/stubs/stringprintf.h \
	google/protobuf/stubs/structurally_valid.cc \
	google/protobuf/stubs/strutil.cc \
	google/protobuf/stubs/strutil.h \
	google/protobuf/stubs/substitute.cc \
	google/protobuf/stubs/substitute.h \
	google/protobuf/stubs/template_util.h \
	google/protobuf/stubs/time.cc \
	google/protobuf/stubs/time.h \
	google/protobuf/stubs/type_traits.h \
	google/protobuf/text_format.cc \
	google/protobuf/text_format.h \
	google/protobuf/timestamp.pb.cc \
	google/protobuf/timestamp.pb.h \
	google/protobuf/type.pb.cc \
	google/protobuf/type.pb.h \
	google/protobuf/unknown_field_set.cc \
	google/protobuf/unknown_field_set.h \
	google/protobuf/util/delimited_message_util.cc \
	google/protobuf/util/delimited_message_util.h \
	google/protobuf/util/field_comparator.cc \
	google/protobuf/util/field_comparator.h \
	google/protobuf/util/field_mask_util.cc \
	google/protobuf/util/field_mask_util.h \
	google/protobuf/util/internal/constants.h \
	google/protobuf/util/internal/datapiece.cc \
	google/protobuf/util/internal/datapiece.h \
	google/protobuf/util/internal/default_value_objectwriter.cc \
	google/protobuf/util/internal/default_value_objectwriter.h \
	google/protobuf/util/internal/error_listener.cc \
	google/protobuf/util/internal/error_listener.h \
	google/protobuf/util/internal/expecting_objectwriter.h \
	google/protobuf/util/internal/field_mask_utility.cc \
	google/protobuf/util/internal/field_mask_utility.h \
	google/protobuf/util/internal/json_escaping.cc \
	google/protobuf/util/internal/json_escaping.h \
	google/protobuf/util/internal/json_objectwriter.cc \
	google/protobuf/util/internal/json_objectwriter.h \
	google/protobuf/util/internal/json_stream_parser.cc \
	google/protobuf/util/internal/json_stream_parser.h \
	google/protobuf/util/internal/location_tracker.h \
	google/protobuf/util/internal/mock_error_listener.h \
	google/protobuf/util/internal/object_location_tracker.h \
	google/protobuf/util/internal/object_source.h \
	google/protobuf/util/internal/object_writer.cc \
	google/protobuf/util/internal/object_writer.h \
	google/protobuf/util/internal/proto_writer.cc \
	google/protobuf/util/internal/proto_writer.h \
	google/protobuf/util/internal/protostream_objectsource.cc \
	google/protobuf/util/internal/protostream_objectsource.h \
	google/protobuf/util/internal/protostream_objectwriter.cc \
	google/protobuf/util/internal/protostream_objectwriter.h \
	google/protobuf/util/internal/structured_objectwriter.h \
	google/protobuf/util/internal/type_info.cc \
	google/protobuf/util/internal/type_info.h \
	google/protobuf/util/internal/type_info_test_helper.h \
	google/protobuf/util/internal/utility.cc \
	google/protobuf/util/internal/utility.h \
	google/protobuf/util/json_util.cc \
	google/protobuf/util/json_util.h \
	google/protobuf/util/message_differencer.cc \
	google/protobuf/util/message_differencer.h \
	google/protobuf/util/package_info.h \
	google/protobuf/util/time_util.cc \
	google/protobuf/util/time_util.h \
	google/protobuf/util/type_resolver.h \
	google/protobuf/util/type_resolver_util.cc \
	google/protobuf/util/type_resolver_util.h \
	google/protobuf/wire_format.cc \
	google/protobuf/wire_format.h \
	google/protobuf/wire_format_lite.cc \
	google/protobuf/wire_format_lite.h \
	google/protobuf/wire_format_lite_inl.h \
	google/protobuf/wrappers.pb.cc \
	google/protobuf/wrappers.pb.h \
	$(NULL)

EXTRA_DIST = LICENSE
